--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Flask==2.3.3
 Flask-SQLAlchemy==3.0.5
 Flask-Login==0.6.3
-psycopg2-binary==2.9.9
+psycopg[binary]>=3.2.0
 gunicorn==21.2.0
 python-dotenv==1.0.0
